--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 # * -------------------------------------------------------------------------------- * #
 # * PROJECT-SPECIFIC
 
-# Be sure to override .gitignore in the template questions before putting anything here.
-
 # * -------------------------------------------------------------------------------- * #
 # * TEMPLATE-SPECIFIC
-# *
 
 # To avoid committing profiler results
 *.prof
@@ -17,6 +14,9 @@ first_time_setup.ps1
 *.code-workspace
 # Avoid committing local docs builds for previewing
 _site
+# If using Google Cloud Platform Workload Identity Federation, avoid committing keys
+# Ignore generated credentials from google-github-actions/auth
+gha-creds-*.json
 
 # * -------------------------------------------------------------------------------- * #
 # * Partial Node.gitignore
@@ -25,19 +25,6 @@ _site
 
 # NPM/Node.JS because of Pyright CI/CD dependency
 node_modules/
-
-# * -------------------------------------------------------------------------------- * #
-# * Modifications to the below Python.gitignore
-# *
-# * https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
-
-
-# IPython
-.ipython/profile_default/*
-!.ipython/profile_default/startup/
-.ipython/profile_default/startup/README
-ipython_config.py
-
 
 # * -------------------------------------------------------------------------------- * #
 # * Modified Python.gitignore
