--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,6 +2,7 @@
 combine_as_imports = true
 force_sort_within_sections = true
 group_by_package = true
+known_first_party = copier-python
 profile = black
 py_version = 311
 skip_gitignore = true
