--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,10 @@
 [pytest]
 addopts = -ra
 testpaths = tests
+# error: Raise for all warnings, even `DeprecationWarning`
+# .*pkg_resources: https://github.com/blakeNaccarato/copier-python/issues/319#issue-1609228740
+# Creating a LegacyVersion: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1454209165
+filterwarnings =
+    error
+    ignore:.*pkg_resources\.declare_namespace.*:DeprecationWarning
+    ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning:pip._vendor.packaging.version
