--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,9 +14,9 @@
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
     "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .gitmodules, .isort.cfg, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
-    ".nest_md": "*.md, LICENSE",
-    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .gitmodules, .isort.cfg, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
+    "*.nest_tools_config": ".env, .gitattributes, .gitignore, .gitmodules, .markdownlint.yaml, codecov.yml, pytest.ini, pythonrc.py, renovate.json, update.ps1, *.jinja",
+    "*.nest_md": "*.md.jinja, LICENSE.jinja",
+    ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md_top": "*.md, LICENSE"
   },
 
@@ -97,8 +97,6 @@
   //* black, ruff
   "black-formatter.importStrategy": "fromEnvironment",
   "black-formatter.args": [],
-  "flake8.importStrategy": "fromEnvironment",
-  "flake8.args": [],
   "ruff.importStrategy": "fromEnvironment",
 
   //! GitHub Actions
@@ -170,9 +168,7 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
-    "**/*.code-search": true,
-    "typings": true,
-    "template": true
+    "**/*.code-search": true
   },
 
   //! Line-width
