--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -46,8 +46,6 @@
   //* black, ruff
   "black-formatter.importStrategy": "fromEnvironment",
   "black-formatter.args": [],
-  "flake8.importStrategy": "fromEnvironment",
-  "flake8.args": [],
   "ruff.importStrategy": "fromEnvironment",
 
   //! GitHub Actions
@@ -82,8 +80,8 @@
     "*.jsx": "${capture}.js",
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock",
-    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .flake8, .gitattributes, .gitmodules, .isort.cfg, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml",
+    ".nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md": "*.md, LICENSE"
   },
 
