--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           pip install -U pip setuptools wheel
           pip install -r template/.tools/requirements/requirements_cicd.txt
       - run: 'pip install -r "template/.tools/requirements/{% if docs_engine == ''Jupyter Book'' %}requirements_docs.txt{% endif %}"'
-  test:
+  bump_precommit:
     if: github.event.pull_request.merged == true
     runs-on: "ubuntu-latest"
     steps:
