Don't update Copier

--- a/template/renovate.json
+++ b/template/renovate.json
@@ -30,6 +30,7 @@
         "sphinx-autobuild",
         "sphinx-book-theme",
         "sphinx-design",
+        "copier",
         "toml",
         "flit",
         "pyright",
