--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
     ":enablePreCommit",
     ":preserveSemverRanges"
   ],
+  "schedule": ["on the first Saturday of the month"],
   "enabledManagers": ["github-actions", "pip_requirements", "pre-commit"],
   "github-actions": {
     "description": "Additionally monitor these files",
@@ -22,9 +23,17 @@
   },
   "packageRules": [
     {
-      "description": "Pre-commit bumping manages these requirements.",
+      "description": "Check for typings and pyright updates all the time.",
+      "matchManagers": ["pip_requirements"],
+      "matchDepNames": ["pyright"],
+      "schedule": ["at any time"],
+      "automerge": false
+    },
+    {
+      "description": "Pre-commit manages these requirements. Project repos manage pyright.",
+      "matchManagers": ["pip_requirements"],
       "matchFiles": ["template/.tools/requirements/requirements_dev.txt"],
-      "ignoreDeps": ["black", "ruff"]
+      "ignoreDeps": ["black", "ruff", "pyright"]
     }
   ]
 }
