--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,10 +32,18 @@
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
     {
-      "label": "setup: Bump template",
+      "label": "setup: Re-answer template questions",
       "type": "process",
       "command": "pwsh",
       "args": [".tools/scripts/Update-Template.ps1"],
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
+      "label": "setup: Bump template",
+      "type": "process",
+      "command": "pwsh",
+      "args": [".tools/scripts/Update-Template.ps1 -Remote -Force"],
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
