--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
       - uses: "actions/setup-python@v4"
-      - run: "python bump/precommit.py"
+      - run: "python .tools/scripts/bump_requirements.py"
       # Have to touch the file in a separate step before installing requirements
       - name: "Create requirements_docs.txt"
         run: "touch template/.tools/requirements/requirements_docs.txt"
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
       - uses: "actions/setup-python@v4"
-      - run: "python bump/precommit.py"
+      - run: "python .tools/scripts/bump_requirements.py"
       # Have to touch the file in a separate step before installing requirements
       - name: "Create requirements_docs.txt"
         run: "touch template/.tools/requirements/requirements_docs.txt"
@@ -38,7 +38,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v3"
       - uses: "actions/setup-python@v4"
-      - run: "python bump/precommit.py"
+      - run: "python .tools/scripts/bump_requirements.py"
       - uses: "stefanzweifel/git-auto-commit-action@v4"
         with:
           commit_message: "Bump pre-commit configuration and related dependencies"
