--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 addopts = -ra
 testpaths = tests
-# error: Raise for all warnings
+# error: Raise for all warnings, even `DeprecationWarning`
 # pkg_resources: https://github.com/blakeNaccarato/copier-python/issues/319#issue-1609228740
 # Creating a LegacyVersion: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1454209165
 # pre_commit read_text and open_text: https://github.com/blakeNaccarato/copier-python/issues/319#issuecomment-1455177114
