--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,29 @@
 {
-  // * -------------------------------------------------------------------------- * //
-  // * PROJECT-SPECIFIC * //
-  // Introduce any project-specific settings here.
-  // Be sure to say override this file in the Copier questionnaire to keep changes.
+  // * ---------------------------------------------------------------------------- * //
+  // * Changes below should persist in significant template updates.
 
   //! Files
-
-  //* Experimental file nesting
   "explorer.fileNesting.patterns": {
     "*.ts": "${capture}.js",
     "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
     "*.jsx": "${capture}.js",
     "*.tsx": "${capture}.ts",
     "tsconfig.json": "tsconfig.*.json",
-    "package.json": "package-lock.json, yarn.lock",
-    "*.nest_tools_config": ".env, .gitattributes, .gitignore, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, codecov.yml, pytest.ini, pythonrc.py, renovate.json, update.ps1, *.jinja",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml",
+    "*.nest_tools_config": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json, *.jinja",
     "*.nest_md": "*.md.jinja, LICENSE.jinja",
     ".nest_tools_config_top": "coverage.xml, setup.ps1, update.ps1, *.code-workspace, *.prof, .copier-answers.yml, .coverage, .coveragerc, .env, .gitattributes, .gitmodules, .markdownlint.yaml, .pre-commit-config.yaml, .pytest_cache, .sourcery.yaml, codecov.yml, pyrightconfig.json, pytest.ini, pythonrc.py, renovate.json",
     ".nest_md_top": "*.md, LICENSE"
   },
-
-  //* Custom file associations
+  //* File associations
   "files.associations": {
-    ".nest_md": "plaintext",
-    ".nest_tools_config": "plaintext",
-    "*.gitignore*": "ignore",
-    "*.ini.jinja": "ini",
-    "*.ps1.jinja": "powershell",
     ".coveragerc": "ini",
     ".env": "dotenv",
     ".pylintrc": "ini",
     "pyrightconfig.json": "jsonc",
-    "*requirements*.txt*": "pip-requirements",
-    ".nest_md_top": "markdown",
-    ".nest_tools_config_top": "plaintext",
+    "*requirements*.txt": "pip-requirements",
+    ".nest_md*": "markdown",
+    ".nest_tools_config*": "plaintext",
     ".sourcery.yaml": "yaml"
   },
 
@@ -55,10 +45,8 @@
     "editor.wordWrap": "wordWrapColumn"
   },
 
-  // * -------------------------------------------------------------------------- * //
-  // * GENERAL * //
-
-  "task.allowAutomaticTasks": "on",
+  // * ---------------------------------------------------------------------------- * //
+  // * Changes below may be lost in significant template updates.
 
   // Environment variables don't load properly otherwise
   // See: https://github.com/microsoft/vscode-python/issues/944#issuecomment-808516207
@@ -84,19 +72,17 @@
   "python.analysis.completeFunctionParens": false, // Buggy for now
 
   //! Lint, test, format
-
   //* pytest
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-
   //* markdownlint
   "markdownlint.config": {
     "first-line-heading": false
   },
-
-  //* black, ruff
+  //* black
   "black-formatter.importStrategy": "fromEnvironment",
   "black-formatter.args": [],
+  //* ruff
   "ruff.importStrategy": "fromEnvironment",
 
   //! GitHub Actions
@@ -120,12 +106,10 @@
   ],
 
   //! Files
-
   //* Experimental file nesting
   "explorer.sortOrder": "foldersNestsFiles",
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
-
   //* File icon associations
   "workbench.iconTheme": "vscode-icons",
   "vsicons.presets.hideExplorerArrows": true,
@@ -136,11 +120,11 @@
   ],
 
   //! Built-in
-
+  //* Allow auto-running tasks
+  "task.allowAutomaticTasks": "on",
   //* Enable native bracket pair colorization
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": true,
-
   //* Editor format on save and more. Can run "File: Save without formatting" to skip.
   "editor.formatOnPaste": true,
   "editor.formatOnType": true,
@@ -150,20 +134,15 @@
     "source.fixAll": true,
     "source.organizeImports": true
   },
-
   //* Enforce whitespace and newlines.
-  //? Automatically enforce whitespace conventions.
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
   "files.trimFinalNewlines": true,
-
   //* Periodically fetch changes to tracked repo. Don't confirm on push/pull.
   "git.autofetch": true,
   "git.confirmSync": false,
-
   //* Markdown editor moves jarringly when this is "true"
   "markdown.preview.scrollEditorWithPreview": false,
-
   //* Exclude
   "search.exclude": {
     "**/node_modules": true,
@@ -172,32 +151,26 @@
   },
 
   //! Line-width
-
   //* Formatting
   "rewrap.wrappingColumn": 88,
   "rewrap.wholeComment": false,
-
   //* Don't validate the body of a commit. Assume people can wrap it in their IDE.
   "git.inputValidationSubjectLength": 88,
   "git.inputValidationLength": 1e100,
-
   //* Default wrapping
   "editor.wordWrapColumn": 88,
   "editor.rulers": [88],
 
-  //! Filetype specifics (incl. line width)
-
+  //! Filetype specifics
   //* .ENV
   "[dotenv]": {
     "editor.wordWrap": "wordWrapColumn",
     "rewrap.autoWrap.enabled": false
   },
-
   //* IPYNB
   "[ipynb]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
-
   //* MD
   "[markdown]": {
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint",
@@ -207,7 +180,6 @@
     "editor.rulers": [124],
     "rewrap.autoWrap.enabled": false
   },
-
   //* JSON
   "[json]": {
     "editor.wordWrap": "wordWrapColumn",
@@ -217,30 +189,25 @@
     "editor.wordWrap": "wordWrapColumn",
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-
   //* PYTHON
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
-
   //* TXT
   "[plaintext]": {
     "editor.wordWrap": "wordWrapColumn"
   },
-
   //* TOML
   "evenBetterToml.formatter.columnWidth": 88,
   "[toml]": {
     "editor.wordWrap": "wordWrapColumn",
     "editor.defaultFormatter": "tamasfe.even-better-toml"
   },
-
   //* TSV
   "[tsv]": {
     //? Indent with tabs
     "editor.insertSpaces": false
   },
-
   //* YAML
   "yaml.format.printWidth": 88,
   "[yaml]": {
