--- a/template/pyrightconfig.json
+++ b/template/pyrightconfig.json
@@ -1,10 +1,13 @@
 {
+  // * ----------------------------------------------------------------------------- * #
+  // * Changes below should persist in significant template updates.
+
+  // * ----------------------------------------------------------------------------- * #
+  // * Changes below may be lost in significant template updates.
+
   // Paths
   "include": ["src"],
   "extraPaths": ["tests"],
-
-  // Project-specific overrides
-  "reportPrivateUsage": "none",
 
   // Type inference helps with untyped upstream, but can be unpredictable
   "useLibraryCodeForTypes": false,
