--- a/template/pyrightconfig.json
+++ b/template/pyrightconfig.json
@@ -10,7 +10,7 @@
   "extraPaths": ["tests"],
 
   // Type inference helps with untyped upstream, but can be unpredictable
-  "useLibraryCodeForTypes": false,
+  "useLibraryCodeForTypes": true,
 
   // Sets most checks to "error". See overrides below
   "typeCheckingMode": "strict",
